[package]
name = "hypnus"
version = "0.2.0"
edition = "2024"
description = "Memory Obfuscation in Rust"
license = "MIT"
readme = "README.md"
authors = ["João Victor"]
repository = "https://github.com/joaoviictorti/hypnus"
homepage = "https://github.com/joaoviictorti/hypnus"
documentation = "https://docs.rs/hypnus/latest"
keywords = ["memory", "obfuscation", "windows", "rust", "redteam"]
categories = ["os", "security"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[lib]
doctest = false

[dependencies]
obfstr = "0.4.4"
dinvk = "0.4.2"
uwd = "0.3.5"
anyhow = { version = "1.0.98", default-features = false }
memchr = { version = "2.7.4", default-features = false }
spin = { version = "0.10.0", default-features = false }
windows-targets = "0.53.4"

# Release profile optimized for minimal size and no debug artifacts
[profile.release]
opt-level = "z"             # Optimize for size (default)
lto = true                  # Link-time optimization
codegen-units = 1           # Single codegen unit for better optimization
panic = "abort"             # Abort on panic (smaller than unwind)
strip = true                # Strip symbols and debug info
debug = false               # No debug info
debug-assertions = false    # No debug assertions
overflow-checks = false     # No overflow checks
split-debuginfo = "off"     # Don't create external PDB

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
]
